chroma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chroma
  namespace: ${UNAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chroma
  template:
    metadata:
      labels:
        app: chroma
    spec:
      enableServiceLinks: false
      containers:
        - name: chroma
          image: chromadb/chroma:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: chroma-data
              mountPath: /data
      volumes:
        - name: chroma-data
          persistentVolumeClaim:
            claimName: chroma-data
---
apiVersion: v1
kind: Service
metadata:
  name: chroma
  namespace: ${UNAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: chroma
  ports:
    - port: 8000
      targetPort: 8000
