ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ${UNAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      # Prevent Kubernetes from injecting service environment variables.
      enableServiceLinks: false

      containers:
        - name: ollama
          image: ollama/ollama:latest

          ports:
            - containerPort: 11434
              protocol: TCP

          resources:
            requests:
              cpu: "2"
              memory: "3Gi"
            limits:
              cpu: "2"
              memory: "3Gi"

          volumeMounts:
            - name: ollama-data
              mountPath: /root/.ollama

      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ${UNAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
