python-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-client
  namespace: ${UNAMESPACE}
spec:
  replicas: 1

  selector:
    matchLabels:
      app: python-client

  template:
    metadata:
      labels:
        app: python-client

    spec:
      enableServiceLinks: false

      containers:
        - name: python-client

          image: asia-south2-docker.pkg.dev/c8-labs/tiny-agent/${UNAMESPACE}-python-client:v1
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: python-client
  namespace: ${UNAMESPACE}
spec:
  selector:
    app: python-client
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
